# qt-openai

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
example/: CMakeLists.txt  main.cpp  readme.md
example/test-chat-gui/: CMakeLists.txt  ChatClientWindow.cpp  ChatClientWindow.h  main.cpp
example/test-download-mgr/: CMakeLists.txt  main.cpp
example/test-image-gen/: CMakeLists.txt  main.cpp
example/test-image-gen-gui/: CMakeLists.txt  ImageGeneratorWindow.cpp  ImageGeneratorWindow.h  main.cpp
example/test-tts-gen/: CMakeLists.txt  main.cpp
example/test-tts-gen-gui/: CMakeLists.txt  TTSGeneratorWindow.cpp  TTSGeneratorWindow.h  main.cpp
lib2/: CMakeLists.txt  ImageDownloader.cpp  OpenAIAPIClient.h  OpenAIBaseClient.cpp  OpenAIImageGenerator.cpp  OpenAIImageGenerator.h  OpenAILibrary.h  OpenAITTSClient.cpp  OpenAITTSClient.h  OpenAITranscriptionClient.cpp
libQtOpenAI/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  FileDownloader.cpp  FileDownloader.h  ImageDownloader.cpp  ImageDownloader.h  OpenAIAPIClient.cpp  OpenAIBaseClient.h  OpenAIImageGenerator.cpp  OpenAIImageGenerator.h  OpenAITTSClient.cpp  OpenAITTSClient.h  OpenAITranscriptionClient.h
resources/: downloads.csv
